# psibase

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OSX_README.md  PROGRESS.md  README.md  csp-recommendations.md  flake.nix  make_package_index.sh  pack_service.cmake  package-lock.json  package.json  plugin_perms_assertion_report.md  requirements-sys-packages-auth.md  requirements.webrtc-chat-meet.2026.05.08.md  server-side-plugin-deps.md  src  test_auth.sh  transaction_execution.md  wasm-plugin-memory-history-new.md  wasm-plugin-memory-history.md  wasm-plugin-memory-plan-new.md  wasm-plugin-memory-plan.md  web-apps.cmake  websocket-auth-token-mechanism.md
.zed/: settings.json  (+1 more)
contracts/: CMakeLists.txt
contracts/base_contracts/: CMakeLists.txt
contracts/newchain_tests/: CMakeLists.txt  nc-account.cpp  nc-account.hpp  nc-boot.cpp  nc-boot.hpp  nc-name.cpp  nc-name.hpp  nc-rpc.cpp  nc-test-cntr.cpp  nc-test.cpp  nc-test.hpp  nc-token.cpp  nc-token.hpp
contracts/psibase_tests/: CMakeLists.txt  account.cpp  account.hpp  boot.cpp  boot.hpp  rpc.cpp  test-cntr.cpp  test-cntr.hpp  test-ec.cpp  test.cpp  test_kv.cpp  test_table.cpp  token.cpp  token.hpp
contracts/system/: CMakeLists.txt
contracts/token/: CMakeLists.txt
contracts/user/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/abieos/: CMakeLists.txt
libraries/arbtrie/: ACID.md  CMakeLists.txt  data_layout.md  design.md  region_design.md
libraries/clio/: CMakeLists.txt  fracpack.md
libraries/debug_eos_vm/: CMakeLists.txt  dwarf.cpp  locals.hpp
libraries/eosiolib/: CMakeLists.txt  abort_message.cpp  simple_malloc.cpp
libraries/net/: CMakeLists.txt  architecture.txt
libraries/newchain/: CMakeLists.txt
libraries/newchain_http/: CMakeLists.txt  http.cpp
libraries/psibase/: CMakeLists.txt
libraries/psibase_http/: CMakeLists.txt  close.cpp  close.hpp  handle_request.cpp  http.cpp  http_session.hpp  http_session_base.cpp  http_session_base.hpp  jwt.cpp  send_request.cpp  send_request.hpp  server_state.hpp  tcp_http_session.cpp  tcp_http_session.hpp  tls_http_session.cpp  tls_http_session.hpp  unix_http_session.cpp  unix_http_session.hpp  websocket.cpp  websocket.hpp  websocket_log_session.cpp  websocket_log_session.hpp  websocket_log_session.ipp
libraries/psidb/: CMakeLists.txt
libraries/psio/: CMakeLists.txt  fracpack.md
libraries/trie/: CMakeLists.txt  big-lmdbx.cpp  big.cpp  bigbmi.cpp  db.cpp  old_test.cpp  tdb.cpp  test.cpp  test2.cpp  trie.cpp
libraries/trie2/: CMakeLists.txt  bank.cpp  big.cpp  database.cpp  free_tree.cpp  object_arena.cpp  object_db.cpp  palloc.cpp  ring_alloc.cpp  swap.cpp  t2.cpp
libraries/triedent/: CMakeLists.txt  bank.cpp  big.cpp  database.cpp  memory_order_doc.md  mermaid.cpp  ring_alloc.cpp  t2.cpp  triedent-tests.cpp
libraries/triedent-unused/: arena.hpp  file_arena.cpp  swap.cpp
native/: CMakeLists.txt
package-templates/rust/: Cargo.toml
programs/psinode/: CMakeLists.txt  config  config.in  connect.cpp  connect.hpp  connection.cpp  connection.hpp  init.cpp  main.cpp  psinode.hpp
programs/psitest/: CMakeLists.txt  main.cpp  psibase.py  psitest-gdb.py
programs/snapshot/: CMakeLists.txt  LightValidator.hpp  SnapshotHeader.hpp  cli.hpp  create-snapshot.cpp  load-snapshot.cpp
rust/: .gitignore  CMakeLists.txt  Cargo.toml  publish.sh
rust/.cargo/: config.toml
rust/.config/: hakari.toml
rust/account_sys/: Cargo.toml
rust/burst-transfer/: Cargo.toml
rust/cargo-psibase/: Cargo.toml  README.md  build.rs
rust/fracpack/: Cargo.toml
rust/gen-cpp-doc/: Cargo.toml
rust/libpsibase/: Cargo.toml
rust/libpsibase_names/: Cargo.toml
rust/md2man/: Cargo.toml
rust/psi_macros/: Cargo.toml
rust/psibase/: .gitignore  Cargo.toml  README.md  build.rs
rust/psibase-macros-test/: Cargo.toml
rust/psibase_macros/: Cargo.toml  README.md
rust/psibase_names/: Cargo.toml  README.md
rust/psibase_package_naming/: Cargo.toml  schema.json
rust/psibase_plugin/: Cargo.toml  README.md
rust/psibase_service/: Cargo.toml
rust/reserved-names/: Cargo.toml  generic-names.txt
rust/rust-workspace-hack/: .gitattributes  Cargo.toml
rust/scripts/: publish.sh  set-version.sh
rust/test_contract/: Cargo.toml  README.md
rust/test_contract_2/: Cargo.toml
rust/test_contract_elections/: Cargo.toml
rust/test_fracpack/: Cargo.toml  build.rs
rust/test_fracpack_macros/: Cargo.toml
rust/test_m/: Cargo.toml  build.rs
rust/test_package/: Cargo.toml
rust/test_panic/: Cargo.toml
rust/test_psibase_macros/: Cargo.toml
rust/test_service_elections/: Cargo.toml  README.md
rust/test_service_psispace/: Cargo.toml  README.md
rust/test_service_sites/: Cargo.toml  README.md
rust/test_subjective/: Cargo.toml
services/: .gitignore  .pnp.cjs  .yarnrc.yml  CMakeLists.txt  Cargo.toml  build.shared.mjs  components.json  eslint.config.mjs  if-build-needed.mjs  package.json  prettier.config.cjs  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  types.d.ts  vite.shared.ts  web-apps.cmake
services/psibase_tests/: AbortService.cpp  AbortService.hpp  AsyncQueryService.cpp  CMakeLists.txt  CounterService.cpp  KeepSocketService.cpp  MockCpuLimit.cpp  ParallelSubjectiveService.cpp  RemoveCode.cpp  RemoveCode.hpp  SocketAuth.cpp  SocketListService.cpp  SubjectiveCounterService.cpp  clock-service.cpp  clock-service.hpp  event-service.cpp  event-service.hpp  memo-service.cpp  semver.json  subjective-service.cpp  subjective-service.hpp  test-ec.cpp  test-service.cpp  test-sig.cpp  test.cpp  testKvMerkle.cpp  test_clock.cpp  test_crypto.cpp  test_event.cpp  test_kv.cpp  test_memo.cpp  test_rpc.cpp  test_semver.cpp  test_socket.cpp  test_subjective.cpp  test_table.cpp  test_verify_services.cpp
services/system/: CMakeLists.txt
services/user/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.json  CMakeLists.txt  README.md  fractally-world.wit  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
wasm/: CMakeLists.txt  psidk-config.cmake  toolchain.cmake
(+4805 files in other folders)
